# sgan

navigan_training/: .gitignore  README.md  pyproject.toml  train.py
navigan_training/configs/: zara1_resume.yaml  zara1_safe.yaml  zara1_scratch.yaml  zara1_socialcircle.yaml
navigan_training/docs/: integration_into_navigan.md  part1_gan_and_transformer.md  part2_diffusion_cvae_graph.md  social_gan_advances_survey.md  socialcircle_training.md
navigan_training/navigan_training/: __init__.py  losses.py  train_loop.py  utils.py
navigan_training/navigan_training/data/: __init__.py  loader.py  trajectories.py
navigan_training/navigan_training/models/: __init__.py  late_attention.py
navigan_training/scripts/: download_data.sh  eval_checkpoint.py  inspect_checkpoint.py  plot_predictions.py  plot_training.py  slurm_train.sbatch
