[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "navigan_training"
version = "0.1.0"
description = "Standalone training for NaviGAN LateAttentionFullGenerator on ETH/UCY (no ROS deps)."
requires-python = ">=3.10"
dependencies = [
    "torch>=1.13",
    "numpy>=1.22",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.6"]
dev = ["pytest>=7", "matplotlib>=3.6"]

[tool.setuptools.packages.find]
include = ["navigan_training*"]
exclude = ["datasets*", "runs*", "models*", "scripts*", "configs*", "logs*"]
